--- a/wiki/Gear_Workbench.html
+++ b/wiki/Gear_Workbench.html
@@ -1,10 +1,10 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Gear Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Gear+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich Gear (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich Gear (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Entorno de trabajo FCGear (43% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier Gear (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente FCGear (81% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pracy Gear (94% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="fr/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Atelier Gear (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Ambiente Gear (100% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy Gear (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="ru/Gear_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; &#1064;&#1077;&#1089;&#1090;&#1077;&#1088;&#1085;&#1103; (FCGear) (80% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <figure typeof="mw:File/Thumb"><a href="index.php?title=Gear_workbench_icon.svg&amp;filetimestamp=20240901100525&amp;.html" class="mw-file-description"><img src="File/Gear_workbench_icon.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Gear External Workbench icon</figcaption></figure>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -116,30 +116,30 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251202213620
+Cached time: 20260115141323
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.137 seconds
-Real time usage: 0.170 seconds
+CPU time usage: 0.110 seconds
+Real time usage: 0.167 seconds
 Preprocessor visited node count: 352/1000000
 Post&#8208;expand include size: 14881/2097152 bytes
 Template argument size: 2844/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1498/5000000 bytes
+Unstrip post&#8208;expand size: 1516/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.423      1 -total
- 58.53%    7.271      1 Template:Userdocnavi
- 23.97%    2.978      1 Template:Navigation_menu_2
- 18.62%    2.313     12 Template:Caption
- 13.83%    1.718      1 Template:TOCright
+100.00%    8.773      1 -total
+ 37.80%    3.316      1 Template:Userdocnavi
+ 27.57%    2.419      1 Template:TOCright
+ 25.09%    2.201      1 Template:Navigation_menu_2
+ 23.67%    2.077     12 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69572-0!canonical and timestamp 20251202213620 and revision id 1709263. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69572-0!canonical and timestamp 20260115141323 and revision id 1709263. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
