--- a/wiki/Release_notes_1.1.html
+++ b/wiki/Release_notes_1.1.html
@@ -378,7 +378,7 @@
 <li>The <span typeof="mw:File"><a href="index.php?title=FEM_SolverElmer.svg&amp;filetimestamp=20241127174550&amp;.html" class="mw-file-description"><img src="File/FEM_SolverElmer.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_SolverElmer.html" title="FEM SolverElmer">Elmer solver's</a> object and task panel were reworked similar to what was done before for CalculiX. It now works with the new implementation of <span typeof="mw:File"><a href="index.php?title=FEM_MeshNetgenFromShape.svg&amp;filetimestamp=20241127174540&amp;.html" class="mw-file-description"><img src="File/FEM_MeshNetgenFromShape.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_MeshNetgenFromShape.html" title="FEM MeshNetgenFromShape">Netgen</a>. Moreover, ParaView PVD files can now be imported. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24912">Pull request #24912</a></li>
 <li>Three new <span typeof="mw:File"><a href="index.php?title=FEM_Examples.svg&amp;filetimestamp=20200822023723&amp;.html" class="mw-file-description"><img src="File/FEM_Examples.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_Examples.html" title="FEM Examples">FEM examples</a> were added - one for the newly implemented electrostatics with the refactored CalculiX solver, one for the newly implemented pressure loads on edges of 2D models and one for the cyclic symmetry introduced in FreeCAD 1.0. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25117">Pull request #25117</a>, <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25191">Pull request #25191</a> and <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25268">Pull request #25268</a></li></ul>
 <h2><span class="mw-headline" id="Material_Workbench">Material Workbench</span></h2>
-<ul><li>Materials can now be stored in external datastores. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull request #21047</a></li></ul>
+<ul><li>Materials can now be stored in external datastores. This feature is experimental and has to be activated explicitly. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull request #21047</a></li></ul>
 <h3><span class="mw-headline" id="Further_Material_improvements">Further Material improvements</span></h3>
 <ul><li>Several new materials with physical properties were added to the material database:
 <ul><li><a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Polycarbonate">Polycarbonate</a> <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19432">Pull request #19432</a></li>
@@ -515,12 +515,12 @@
 <li>The alignment of sketches in SVG export and legacy DXF export has been fixed. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19765">Pull request #19765</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260115145510
+Cached time: 20260115145815
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.309 seconds
-Real time usage: 0.408 seconds
+CPU time usage: 0.323 seconds
+Real time usage: 0.359 seconds
 Preprocessor visited node count: 746/1000000
 Post&#8208;expand include size: 3528/2097152 bytes
 Template argument size: 533/2097152 bytes
@@ -531,19 +531,19 @@ Unstrip post&#8208;expand size: 1570/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.724      1 -total
- 24.02%    3.297      2 Template:PropertyData
- 22.56%    3.096      2 Template:Message
- 13.85%    1.900      2 Template:Variable
-  8.61%    1.182      2 Template:FileName
-  8.58%    1.178      5 Template:KEY
-  8.15%    1.118      1 Template:VersionPlus
-  7.45%    1.023      1 Template:VersionMinus
-  7.36%    1.010      1 Template:VeryImportantMessage
-  7.12%    0.977      1 Template:Incode
+100.00%   10.232      1 -total
+ 23.98%    2.454      2 Template:PropertyData
+ 16.79%    1.718      2 Template:Message
+ 14.52%    1.486      2 Template:Variable
+  9.55%    0.977      1 Template:VeryImportantMessage
+  8.60%    0.880      1 Template:Incode
+  8.43%    0.863      5 Template:KEY
+  7.97%    0.815      1 Template:VersionPlus
+  7.45%    0.762      2 Template:FileName
+  6.95%    0.711      1 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363849-0!canonical and timestamp 20260115145527 and revision id 1738742. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363849-0!canonical and timestamp 20260115145844 and revision id 1738743. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
