--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -6,8 +6,8 @@
 <li><a href="../es/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="Centro de usuarios (82% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Documentation pour les utilisateurs (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/User_hub.html" class="mw-pt-progress mw-pt-progress--med" title="Korisni&#269;ko okru&#382;enje (22% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="../it/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="Hub degli utenti (88% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../hu/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="User hub (88% translated)" lang="hu" dir="ltr">magyar</a></li>
+<li><a href="../it/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Hub degli utenti (100% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../hu/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Felhaszn&aacute;l&oacute;i hub (100% translated)" lang="hu" dir="ltr">magyar</a></li>
 <li><a href="../pl/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Centrum u&#380;ytkownika. (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub/pt (12% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="Central do Usu&aacute;rio (80% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -15,14 +15,14 @@
 <li><a href="../fi/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (4% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (10% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
-<li><a href="../bg/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="&#1055;&#1086;&#1084;&#1086;&#1097; &#1047;&#1072; &#1053;&#1086;&#1074;&#1080; &#1055;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; (10% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
+<li><a href="../bg/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1062;&#1077;&#1085;&#1090;&#1098;&#1088; &#1079;&#1072; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; (100% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#1062;&#1077;&#1085;&#1090;&#1088; &#1087;&#1086;&#1083;&#1100;&#1079;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1077;&#1081; (84% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
 <li><a href="../zh-cn/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#29992;&#25143;&#20837;&#21475; (74% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../zh-hant/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="zh-Hant" dir="ltr">&#20013;&#25991;&#65288;&#32321;&#39636;&#65289;</a></li>
 <li><a href="../zh-tw/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="&#20351;&#29992;&#32773;&#20013;&#24515; (2% translated)" lang="zh-Hant-TW" dir="ltr">&#20013;&#25991;&#65288;&#33274;&#28771;&#65289;</a></li>
-<li><a href="../ja/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#12518;&#12540;&#12470;&#12540;&#21521;&#12369;&#12495;&#12502; (72% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
+<li><a href="../ja/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#12518;&#12540;&#12470;&#12540;&#21521;&#12369;&#12495;&#12502; (74% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49324;&#50857;&#51088; &#46020;&#50880;&#47568; &#47784;&#51020; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -32,10 +32,8 @@
 <p>Tato &#269;&aacute;st je hlavn&iacute; n&aacute;pov&#283;da pro nov&aacute;&#269;ky ve FreeCADu.
 </p>
 </div>
-<div class="mw-translate-fuzzy">
-<p>M&#283;jte pros&iacute;m na pam&#283;ti, &#382;e stejn&#283; jako s&aacute;m FreeCAD, jsou tyto str&aacute;nky pr&#367;b&#283;&#382;n&#283; ve v&yacute;voji. FreeCAD se ji&#382; te&#271; vyzna&#269;uje mnoha zaj&iacute;mav&yacute;mi n&aacute;stroji pro koncov&eacute; u&#382;ivatele a dal&scaron;&iacute; jsou pr&#367;b&#283;&#382;n&#283; p&#345;id&aacute;v&aacute;ny, co&#382; je d&#367;vodem pro&#269; st&aacute;le je&scaron;t&#283; chyb&iacute; fin&aacute;ln&iacute; nebo aktu&aacute;ln&iacute; dokumentace pro koncov&eacute;ho u&#382;ivatele.
+<p>FreeCAD je neust&aacute;le vyv&iacute;jen, tak&#382;e n&#283;kter&eacute; informace mohou b&yacute;t ne&uacute;pln&eacute; nebo zastaral&eacute;. Pokud nem&#367;&#382;ete naj&iacute;t informace, kter&eacute; pot&#345;ebujete, nev&aacute;hejte se zeptat na <a rel="nofollow" class="external text" href="https://forum.freecad.org">FreeCAD forum</a>.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>If you'd like to contribute to FreeCAD, please <a href="../Donate.html" title="Donate">donate</a>, and see the <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> page for other ways to contribute. If you'd like to edit this wiki read the <a href="../WikiPages.html" title="WikiPages">WikiPages</a> for the general guidelines that you should follow.
 </p>
@@ -220,11 +218,11 @@
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">User documentation</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
-<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../cs/Compile_on_Docker.html" title="Compile on Docker/cs">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -232,33 +230,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251129093849
+Cached time: 20260115152646
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.150 seconds
-Preprocessor visited node count: 319/1000000
+CPU time usage: 0.100 seconds
+Real time usage: 0.248 seconds
+Preprocessor visited node count: 318/1000000
 Post&#8208;expand include size: 6600/2097152 bytes
 Template argument size: 2004/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4275/5000000 bytes
+Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.959      1 -total
- 49.75%    6.944      1 Template:Userdocnavi/cs
- 21.88%    3.055      1 Template:Navigation_menu_2
- 13.47%    1.881      1 Template:TOCright
-  9.45%    1.318      5 Template:Incode
-  7.61%    1.062      3 Template:Version
-  7.39%    1.032      1 Template:Button
-  7.19%    1.003      2 Template:VersionMinus
+100.00%   24.371      1 -total
+ 65.56%   15.977      1 Template:Userdocnavi/cs
+ 34.75%    8.469      1 Template:Navigation_menu_2
+  9.27%    2.259      3 Template:Version
+  7.83%    1.909      1 Template:TOCright
+  5.03%    1.225      5 Template:Incode
+  4.75%    1.157      2 Template:VersionMinus
+  3.96%    0.965      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20251129093849 and revision id 1678790. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115152646 and revision id 1738745. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
